[tool.poetry]
name = "accountability-game"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "lab"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
voila = "^0.2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
